force-app/main/default/objects/Contact/fields/EMS_website__c.field-meta.xml
<CustomField>
    <fullName>EMS_website__c</fullName>
    <label>Website</label>
    <type>Url</type>
</CustomField>