force-app/main/default/objects/Contact/fields/EMS_Year_Founded_in__c.field-meta.xml
<CustomField>
    <fullName>EMS_Year_Founded_in__c</fullName>
    <label>Year Founded in</label>
    <type>Date</type>
</CustomField>