force-app/main/default/objects/Contact/fields/Family_Information_Check__c.field-meta.xml
<CustomField>
    <fullName>Family_Information_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family Information Check</label>
    <type>Checkbox</type>
</CustomField>