force-app/main/default/objects/Contact/fields/Financial_Information_Check__c.field-meta.xml
<CustomField>
    <fullName>Financial_Information_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Information Check</label>
    <type>Checkbox</type>
</CustomField>