force-app/main/default/objects/Contact/fields/FloatTypeLeaves__c.field-meta.xml
<CustomField>
    <fullName>FloatTypeLeaves__c</fullName>
    <label>No of Avilable floatLeaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>