force-app/main/default/objects/Contact/fields/Highest_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Highest_Qualification__c</fullName>
    <label>Highest Qualification</label>
    <length>100</length>
    <type>Text</type>
</CustomField>