force-app/main/default/objects/Contact/fields/HR_Email__c.field-meta.xml
<CustomField>
    <fullName>HR_Email__c</fullName>
    <label>HR Email</label>
    <type>Email</type>
</CustomField>