force-app/main/default/objects/Contact/fields/IdentityInformationCheck__c.field-meta.xml
<CustomField>
    <fullName>IdentityInformationCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Identity Information Check</label>
    <type>Checkbox</type>
</CustomField>