force-app/main/default/objects/Contact/fields/Is_Email_Sent_Post_Onborading_Mail__c.field-meta.xml
<CustomField>
    <fullName>Is_Email_Sent_Post_Onborading_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email Sent Post Onborading Mail</label>
    <type>Checkbox</type>
</CustomField>