force-app/main/default/objects/Contact/fields/Is_Email_Sent_To_IT_Team__c.field-meta.xml
<CustomField>
    <fullName>Is_Email_Sent_To_IT_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Email sent to IT Team</label>
    <type>Checkbox</type>
</CustomField>