force-app/main/default/objects/Contact/fields/Is_PreOnboarding_Mail_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_PreOnboarding_Mail_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is PreOnboarding Mail Sent</label>
    <type>Checkbox</type>
</CustomField>