force-app/main/default/objects/Contact/fields/is_Resource_Active__c.field-meta.xml
<CustomField>
    <fullName>is_Resource_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Resource Active ?</label>
    <type>Checkbox</type>
</CustomField>