force-app/main/default/objects/Contact/fields/IT_Email__c.field-meta.xml
<CustomField>
    <fullName>IT_Email__c</fullName>
    <label>IT Email</label>
    <type>Email</type>
</CustomField>