force-app/main/default/objects/Contact/fields/Last_Appraisal_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Appraisal_Date__c</fullName>
    <label>Last Appraisal Date</label>
    <type>Date</type>
</CustomField>