force-app/main/default/objects/Contact/fields/LeaveApprover__c.field-meta.xml
<CustomField>
    <fullName>LeaveApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This lookup field will store the contact value, which is the Leave approver for the contact.
The leave approver will be decided by the relationship type field on the Resource relationship object record.</description>
    <label>Leave Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Leave Approver)</relationshipLabel>
    <relationshipName>LeaveApprover</relationshipName>
    <type>Lookup</type>
</CustomField>