force-app/main/default/objects/Contact/fields/Level_of_Approval__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Approval__c</fullName>
    <label>Overriden Level of Approval</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>