force-app/main/default/objects/Contact/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>AP.ID-{000000}</displayFormat>
    <label>Applicant Id</label>
    <type>AutoNumber</type>
</CustomField>