force-app/main/default/objects/Contact/fields/No_of_Avilable_floatLeave_credits__c.field-meta.xml
<CustomField>
    <fullName>No_of_Avilable_floatLeave_credits__c</fullName>
    <label>No of Avilable floatLeave credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>