force-app/main/default/objects/Contact/fields/No_of_Avilable_floatLeaves__c.field-meta.xml
<CustomField>
    <fullName>No_of_Avilable_floatLeaves__c</fullName>
    <formula>1 - UtlizedFloatLeaves__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Avilable floatLeaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>