force-app/main/default/objects/Contact/fields/No_of_Floating_Holiday_Leaves_Credited__c.field-meta.xml
<CustomField>
    <fullName>No_of_Floating_Holiday_Leaves_Credited__c</fullName>
    <formula>No_of_Avilable_floatLeaves__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Floating Holiday Leaves Credited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>