force-app/main/default/objects/Contact/fields/No_of_Floating_Holiday_leaves_utilised__c.field-meta.xml
<CustomField>
    <fullName>No_of_Floating_Holiday_leaves_utilised__c</fullName>
    <formula>UtlizedFloatLeaves__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Floating Holiday leaves utilised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>