force-app/main/default/objects/Contact/fields/No_of_Paid_Time_Off_leaves_available__c.field-meta.xml
<CustomField>
    <fullName>No_of_Paid_Time_Off_leaves_available__c</fullName>
    <formula>EMS_LM_No_Of_Availble_Leaves__c</formula>
    <label>No of Paid Time Off leaves available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>