force-app/main/default/objects/Contact/fields/No_of_Paid_Time_Off_leaves_credited__c.field-meta.xml
<CustomField>
    <fullName>No_of_Paid_Time_Off_leaves_credited__c</fullName>
    <formula>EMS_LM_No_Of_Leaves_Credit__c</formula>
    <label>No of Paid Time Off Leaves Credited</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>