force-app/main/default/objects/Contact/fields/No_of_Paid_Time_Off_leaves_utilised__c.field-meta.xml
<CustomField>
    <fullName>No_of_Paid_Time_Off_leaves_utilised__c</fullName>
    <formula>EMS_LM_No_Of_Utilized_Leaves__c</formula>
    <label>No of Paid Time Off Leaves Utilised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>