force-app/main/default/objects/Contact/fields/No_of_Unpaid_time_Off_leaves_utilised__c.field-meta.xml
<CustomField>
    <fullName>No_of_Unpaid_time_Off_leaves_utilised__c</fullName>
    <formula>EMS_LM_No_Of_Utilized_Loss_Of_Pay__c</formula>
    <label>No of Unpaid time Off leaves utilised</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>