force-app/main/default/objects/Contact/fields/No_Of_Utilized_Paternity_Leaves__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Utilized_Paternity_Leaves__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No Of Utilized Paternity Leaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>