force-app/main/default/objects/Contact/fields/No_OF_Utilized_Work_from_Home__c.field-meta.xml
<CustomField>
    <fullName>No_OF_Utilized_Work_from_Home__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No of Utilized Work from Home</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>