force-app/main/default/objects/Contact/fields/Not_Eligible_For_Annual_Awards__c.field-meta.xml
<CustomField>
    <fullName>Not_Eligible_For_Annual_Awards__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Eligible For Annual Awards</label>
    <type>Checkbox</type>
</CustomField>