force-app/main/default/objects/Contact/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <formula>Resource_Role__r.Notice_Consider_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notice Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>