force-app/main/default/objects/Contact/fields/Number_of_Work_From_Home_s__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Work_From_Home_s__c</fullName>
    <formula>No_OF_Utilized_Work_from_Home__c</formula>
    <label>Number of Work From Home&apos;s</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>