force-app/main/default/objects/Contact/fields/Official_Email_ID_Created_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Official_Email_ID_Created_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Official Email ID Created: For IT Team</label>
    <type>Checkbox</type>
</CustomField>