force-app/main/default/objects/Contact/fields/Official_Mail__c.field-meta.xml
<CustomField>
    <fullName>Official_Mail__c</fullName>
    <label>Official Email ID(old)</label>
    <type>Email</type>
</CustomField>