force-app/main/default/objects/Contact/fields/Override_the_standard_level_of_approval__c.field-meta.xml
<CustomField>
    <fullName>Override_the_standard_level_of_approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override the standard level of approval</label>
    <type>Checkbox</type>
</CustomField>