force-app/main/default/objects/Contact/fields/Personal_Email__c.field-meta.xml
<CustomField>
    <fullName>Personal_Email__c</fullName>
    <label>Personal Email Id</label>
    <type>Email</type>
</CustomField>