force-app/main/default/objects/Contact/fields/PF_Forms_Check__c.field-meta.xml
<CustomField>
    <fullName>PF_Forms_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PF Forms Check</label>
    <type>Checkbox</type>
</CustomField>