force-app/main/default/objects/Contact/fields/Phone_text__c.field-meta.xml
<CustomField>
    <fullName>Phone_text__c</fullName>
    <label>Phone(text)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>