force-app/main/default/objects/Contact/fields/Post_Onboarding_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Post_Onboarding_Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Onboarding Confirm</label>
    <type>Checkbox</type>
</CustomField>