force-app/main/default/objects/Contact/fields/Pre_Joining_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Joining_Date__c</fullName>
    <label>Pre-Joining Date</label>
    <type>Date</type>
</CustomField>