force-app/main/default/objects/Contact/fields/present_location__c.field-meta.xml
<CustomField>
    <fullName>present_location__c</fullName>
    <label>Location</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>