force-app/main/default/objects/Contact/fields/Probationary_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Probationary_Period_End_Date__c</fullName>
    <label>Probationary Period End Date</label>
    <type>Date</type>
</CustomField>