force-app/main/default/objects/Contact/fields/ProfileConfirm__c.field-meta.xml
<CustomField>
    <fullName>ProfileConfirm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile Confirm</label>
    <type>Checkbox</type>
</CustomField>