force-app/main/default/objects/Contact/fields/Received_Joining_Kit_Assigned_to_HR__c.field-meta.xml
<CustomField>
    <fullName>Received_Joining_Kit_Assigned_to_HR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Received Joining Kit: For HR Team</label>
    <type>Checkbox</type>
</CustomField>