force-app/main/default/objects/Contact/fields/Resource_Manager__c.field-meta.xml
<CustomField>
    <fullName>Resource_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource Manager</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Resource</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Resource Manager)</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>