force-app/main/default/objects/Contact/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <label>Resume</label>
    <type>Url</type>
</CustomField>