force-app/main/default/objects/Contact/fields/Send_joining_date_confirmation_to_the_RM__c.field-meta.xml
<CustomField>
    <fullName>Send_joining_date_confirmation_to_the_RM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Joining Date Confirmation to RM</label>
    <type>Checkbox</type>
</CustomField>