force-app/main/default/objects/Contact/fields/Send_joining_date_to_resource_manager__c.field-meta.xml
<CustomField>
    <fullName>Send_joining_date_to_resource_manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send joining date to resource manager</label>
    <type>Checkbox</type>
</CustomField>