force-app/main/default/objects/Contact/fields/Source_of_Hire__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Hire__c</fullName>
    <label>Source of Hire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Sourced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>