force-app/main/default/objects/Contact/fields/TA_Email__c.field-meta.xml
<CustomField>
    <fullName>TA_Email__c</fullName>
    <label>TA Email</label>
    <type>Email</type>
</CustomField>