force-app/main/default/objects/Contact/fields/Tentative_Date_of_Joining__c.field-meta.xml
<CustomField>
    <fullName>Tentative_Date_of_Joining__c</fullName>
    <label>Tentative Date of Joining</label>
    <type>Date</type>
</CustomField>