force-app/main/default/objects/Contact/fields/Test_phone__c.field-meta.xml
<CustomField>
    <fullName>Test_phone__c</fullName>
    <label>Test phone</label>
    <type>Phone</type>
</CustomField>