force-app/main/default/objects/Contact/fields/Timesheet_NoNeed__c.field-meta.xml
<CustomField>
    <fullName>Timesheet_NoNeed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Timesheet NoNeed</label>
    <type>Checkbox</type>
</CustomField>