force-app/main/default/objects/Contact/fields/UtlizedFloatLeaves__c.field-meta.xml
<CustomField>
    <fullName>UtlizedFloatLeaves__c</fullName>
    <label>No Of UtlizedFloatLeaves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>