force-app/main/default/objects/Contact/fields/Vehicle_Details_Check__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Details_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vehicle Details Check</label>
    <type>Checkbox</type>
</CustomField>