force-app/main/default/objects/Contact/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Four-wheeler</fullName>
            </value>
            <value>
                <fullName>Two-wheeler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>