force-app/main/default/objects/Contact/fields/visiable_to_edit__c.field-meta.xml
<CustomField>
    <fullName>visiable_to_edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>visiable to edit</label>
    <type>Checkbox</type>
</CustomField>