force-app/main/default/objects/Contact/fields/WFO_Days_Count__c.field-meta.xml
<CustomField>
    <fullName>WFO_Days_Count__c</fullName>
    <label>WFO Days Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>