force-app/main/default/objects/Contact/fields/Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>Work_Experience__c</fullName>
    <label>Work Experience</label>
    <length>200</length>
    <type>Text</type>
</CustomField>