force-app/main/default/objects/Contact/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Location</label>
    <referenceTo>Office_Location__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>