force-app/main/default/objects/Contact/fields/Work_Location_Country__c.field-meta.xml
<CustomField>
    <fullName>Work_Location_Country__c</fullName>
    <formula>TEXT(Work_Location__r.Country__c)</formula>
    <label>Work Location Country</label>
    <type>Text</type>
</CustomField>