force-app/main/default/objects/Contact/recordTypes/Resource.recordType-meta.xml
<RecordType>
    <fullName>Resource</fullName>
    <active>true</active>
    <label>Resource</label>
</RecordType>