force-app/main/default/objects/Contact/recordTypes/Resource_Active.recordType-meta.xml
<RecordType>
    <fullName>Resource_Active</fullName>
    <active>false</active>
    <label>Resource Active</label>
</RecordType>