force-app/main/default/objects/Contact/recordTypes/Resource_Inactive.recordType-meta.xml
<RecordType>
    <fullName>Resource_Inactive</fullName>
    <active>true</active>
    <label>Resource Inactive</label>
</RecordType>