force-app/main/default/objects/Contact/recordTypes/Sales_Contact.recordType-meta.xml
<RecordType>
    <fullName>Sales_Contact</fullName>
    <active>true</active>
    <label>Sales Contact</label>
</RecordType>