force-app/main/default/objects/Contact/validationRules/Date_of_joining_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_joining_validation</fullName>
    <active>true</active>
    <description>Date of joining should not be past date</description>
    <errorConditionFormula>EMS_EM_JD__c  &lt;  TODAY()</errorConditionFormula>
    <errorDisplayField>EMS_EM_JD__c</errorDisplayField>
    <errorMessage>Date of Joining cannot be a past date</errorMessage>
</ValidationRule>