force-app/main/default/objects/Contact/validationRules/Level_Approval_Must_Be_Less_Than_3.validationRule-meta.xml
<ValidationRule>
    <fullName>Level_Approval_Must_Be_Less_Than_3</fullName>
    <active>true</active>
    <errorConditionFormula>Override_the_standard_level_of_approval__c &amp;&amp; Level_of_Approval__c &gt; 3</errorConditionFormula>
    <errorMessage>The Level of Approval value must be less than or equal to 3</errorMessage>
</ValidationRule>