force-app/main/default/objects/Contact/validationRules/Level_Of_Approval_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Level_Of_Approval_Is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>Override_the_standard_level_of_approval__c &amp;&amp; ISNULL( Level_of_Approval__c )</errorConditionFormula>
    <errorMessage>Level of Approval value is Required.</errorMessage>
</ValidationRule>