force-app/main/default/objects/Contact/validationRules/marred_status.validationRule-meta.xml
<ValidationRule>
    <fullName>marred_status</fullName>
    <active>false</active>
    <errorConditionFormula>OR((AND(ISPICKVAL( EMS_EM_Mstatus__c , &quot;Married&quot;), ISBLANK(EMS_EM_DOW__c) )),(AND(ISPICKVAL( EMS_EM_Mstatus__c , &quot;Married&quot;), ISBLANK(EMS_EM_Spouse__c) )))</errorConditionFormula>
    <errorMessage>Please Fill in the Spouse&apos;s Name and  Date of wedding</errorMessage>
</ValidationRule>