force-app/main/default/objects/Contact/validationRules/Pre_Joining_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Pre_Joining_Date_Validation</fullName>
    <active>true</active>
    <description>Pre joining date should not be less than today.</description>
    <errorConditionFormula>OR( AND (ISNEW(),Pre_Joining_Date__c &lt; TODAY()) , AND(ISCHANGED(Pre_Joining_Date__c),Pre_Joining_Date__c &lt; TODAY()))</errorConditionFormula>
    <errorDisplayField>Pre_Joining_Date__c</errorDisplayField>
    <errorMessage>Pre joining date should not be less than today</errorMessage>
</ValidationRule>