force-app/main/default/objects/Contact/validationRules/Tentative_Date_of_Joining_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Tentative_Date_of_Joining_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR( AND (ISNEW(),Tentative_Date_of_Joining__c &lt; TODAY()) , AND(ISCHANGED(Tentative_Date_of_Joining__c),Tentative_Date_of_Joining__c &lt; TODAY()))</errorConditionFormula>
    <errorDisplayField>Tentative_Date_of_Joining__c</errorDisplayField>
    <errorMessage>Tentative Date of Joining cannot be a past date</errorMessage>
</ValidationRule>