force-app/main/default/objects/Contact/validationRules/Test_phone_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Test_phone_validation</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( Test_phone__c ) != 10</errorConditionFormula>
    <errorMessage>Enter valid phone number</errorMessage>
</ValidationRule>