force-app/main/default/objects/Contact/validationRules/Utilized_leave_cannot_less_than_5.validationRule-meta.xml
<ValidationRule>
    <fullName>Utilized_leave_cannot_less_than_5</fullName>
    <active>true</active>
    <errorConditionFormula>EMS_LM_No_Of_Availble_Leaves__c  &lt;=-5.5</errorConditionFormula>
    <errorMessage>You don&apos;t have enough leave balance. Consider applying for leave of some other type.</errorMessage>
</ValidationRule>