force-app/main/default/objects/Contact/validationRules/Validate_Alternative_Contact_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Alternative_Contact_Number</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
OR(
LEN( EMS_EM_Alternate_Contact_Number__c ) &lt;= 9 ,
LEN( EMS_EM_Alternate_Contact_Number__c ) &gt;= 11
),
NOT(
OR(
REGEX(EMS_EM_Alternate_Contact_Number__c, &quot;[0-9 ]+&quot;)
)
))</errorConditionFormula>
    <errorDisplayField>EMS_EM_Alternate_Contact_Number__c</errorDisplayField>
    <errorMessage>Enter valid phone number</errorMessage>
</ValidationRule>