force-app/main/default/objects/Contact/validationRules/Validate_Contact_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Contact_Number</fullName>
    <active>false</active>
    <errorConditionFormula>AND( NOT(ISBLANK(EMS_Phone_Number__c)),
OR( 
NOT(REGEX( EMS_Phone_Number__c , &quot;\\D*?(\\d\\D*?){10}&quot;)),
(LEN( EMS_Phone_Number__c ) &lt;&gt; 10)
))</errorConditionFormula>
    <errorDisplayField>EMS_Phone_Number__c</errorDisplayField>
    <errorMessage>Enter valid phone number</errorMessage>
</ValidationRule>