force-app/main/default/objects/Contact/validationRules/Validate_Vehicle_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Vehicle_Number</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(
   OR(
       REGEX(Vehicle_Number__c, &quot;(\\D)+(\\d)+&quot;),          
       REGEX(Vehicle_Number__c,&quot;[^%$#@&amp;!*()^+_-]&quot;),
       REGEX(Vehicle_Number__c,&quot;[^=,&lt;.&gt;/?~`]&quot;)
   )
)</errorConditionFormula>
    <errorDisplayField>Vehicle_Number__c</errorDisplayField>
    <errorMessage>Enter a valid vehicle number</errorMessage>
</ValidationRule>