force-app/main/default/objects/Contact/validationRules/Work_location_Required_for_Resource.validationRule-meta.xml
<ValidationRule>
    <fullName>Work_location_Required_for_Resource</fullName>
    <active>false</active>
    <errorConditionFormula>AND( RecordTypeId = &apos;0125e000000qrLTAAY&apos;, ISBLANK( Work_Location__c ) )</errorConditionFormula>
    <errorDisplayField>Work_Location__c</errorDisplayField>
    <errorMessage>Please Provide Work Location</errorMessage>
</ValidationRule>