force-app/main/default/objects/Contact/listViews/Active_Resources.listView-meta.xml
<ListView>
    <fullName>Active_Resources</fullName>
    <columns>EMS_RM_Employee_Id__c</columns>
    <columns>FULL_NAME</columns>
    <columns>EMS_Phone_Number__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Resource_Role__c</columns>
    <columns>CONTACT.REPORTS_TO.NAME</columns>
    <columns>Work_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Resource</value>
    </filters>
    <filters>
        <field>EMS_RM_ApplicantStatus_Update__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Resources</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>HR_Team</group>
    </sharedTo>
</ListView>