force-app/main/default/objects/Contact/listViews/All_Employees.listView-meta.xml
<ListView>
    <fullName>All_Employees</fullName>
    <columns>EMS_RM_Employee_Id__c</columns>
    <columns>FULL_NAME</columns>
    <columns>EMS_Phone_Number__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Resource_Role__c</columns>
    <columns>EMS_RM_ApplicantStatus_Update__c</columns>
    <columns>Work_Location__c</columns>
    <columns>Resource_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.Resource</value>
    </filters>
    <filters>
        <field>EMS_RM_ApplicantStatus_Update__c</field>
        <operation>equals</operation>
        <value>Active,Active - Probation</value>
    </filters>
    <label>All Employees</label>
</ListView>