force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>EMS_Phone_Number__c</columns>
    <columns>Personal_Email__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>EMS_EM_JD__c</columns>
    <columns>CONTACT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>